@@ -38,6 +38,10 @@
 <p>2020-01-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pict.c (WritePICTImage): Eliminating small buffer overrun
+when run-length encoding pixels.  Fixes SourceForge bug #620
+&quot;heap-buffer-overflow in EncodeImage at coders/pict.c:1114&quot; which
+was reported by Suhwan Song.</li>
 <li>coders/logo.c (ReadLOGOImage): PATTERN error handling was
 incomplete.  Add appropriate error handling.
 (ReadLOGOImage): Switch to using ConstituteTextureImage() rather
